--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -73,7 +73,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                      </div>
                         <button onclick="toggleContent38()">Palabras Agu/Gra/Esd/Sobr</button>
                                      <div id="content38" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                        <iframe src="https://www.flippity.net/sw.asp?k=1B-6UCeVAbTR79FwsrZ91PoIRhK_UUVVrf5kJz1ADHKs&q=y" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                  
+                                        <iframe src="https://www.flippity.net/sw.asp?k=1B-6UCeVAbTR79FwsrZ91PoIRhK_UUVVrf5kJz1ADHKs" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                  
                                     </div><br> 
  
  
