--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -74,10 +74,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <button onclick="toggleContent38()">Palabras Agu/Gra/Esd/Sobr</button>
                                      <div id="content38" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://www.flippity.net/sw.asp?k=1s3dWQZi2bNAARYSgylNgFKqioHnkn44GdcuZbCpkzU4" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                  
-                                    </div><br>  
+                                    </div> 
+                        <button onclick="toggleContent39()">Conjugación Verbos irreg.</button>
+                                    <div id="content39" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                        <iframe src="https://learningapps.org/watch?v=pr0vma21j21" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
  
- 
-
+                                    </div><br> 
 
 </article>
 </div>
