--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -59,7 +59,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <button onclick="toggleContent42()">Mini-Test 1</button>
                                    <div id="content42" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4V5zSrL-5PFowppJCUBUM8HzjcjAALBZ1foAiimlbcQHiGw/viewform?embedded=true" width="640" height="4873" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-                                   </div>
+                                   </div><br>
+                       <button onclick="toggleContent46()">Mini-Test 2</button>
+                                  <div id="content46" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKH0K_7hmemylLUUo4l5ybAadIx-0-tHLSrrVDtW7U4xWqdw/viewform?embedded=true" width="640" height="2236" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                                  </div>
 
                         <h2>Práctica</h2>
                         <button onclick="toggleContent35()">Profesiones I</button>
