--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -104,11 +104,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                        <button onclick="toggleContent44()">Audio (PPS)</button>
                                     <div id="content44" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://learningapps.org/watch?app=18185151" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                                    </div>
+                                    </div><br>
                       <button onclick="toggleContent45()">PPS vs Pretérito Perfecto</button>
                                                  <div id="content45" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                    <iframe src="https://learningapps.org/watch?app=18185525" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                  </div>
+                       <button onclick="toggleContent48()">Verbos Irreg (Presente)</button>
+                                                  <div id="content48" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                  <iframe src="https://quizlet.com/582804367/match/embed?i=2nc5sb&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+                                                  </div>
+                        <button onclick="toggleContent49()">Verbos Irreg (PPS)</button>
+                                                   <div id="content49" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                  <iframe src="https://quizlet.com/582830524/match/embed?i=2nc5sb&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+                                                   </div>
+
 
 
 
