--- a/es/a1-iniciacion.html
+++ b/es/a1-iniciacion.html
@@ -143,9 +143,9 @@ Precio: 80 PLN/1 hora. (hasta 4 personas), 60 PLN/1h (hasta 8 personas). Clases 
             </tr>
             <tr>
               <td>Tres opciones 👆 (Selecciona en el formulario que se desplegará luego de hacer clic en "RESERVA"👉)</td>
-              <td>02.01.2022 - 14.04.2023</td>
+              <td>02.02.2022 - 14.04.2023</td>
               <td><ul id="price"><li>4800 PLN (2 a 4 personas), o</li><li>4800 PLN (2 a 4 personas), o</li> <li>120 zlotys (1:1)</li></ul></td>
-                <td><button class="order" onclick="toggleContent59()">RESERVA</button></td>
+                <td><button id="order" onclick="toggleContent59()">RESERVA</button></td>
             </tr>
         </table>
 
